<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:scrollbars="vertical">

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/tableLayout1" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:shrinkColumns="*"
	android:stretchColumns="*">
	 
	<TableRow android:id="@+id/tableRow4" android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:gravity="center_horizontal">
		<TextView android:id="@+id/textView9" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:textStyle="bold"
			android:typeface="serif" android:textSize="18dp" android:gravity="center"
			android:layout_span="6" android:text="@string/header_tabletitle"></TextView>
	</TableRow>
	
	<TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<TextView android:id="@+id/Die" android:textStyle="bold"
			android:typeface="serif" android:text="@string/header_die"></TextView>
		<TextView android:id="@+id/TextView04" android:textStyle="bold"
			android:typeface="serif" android:text="@string/header_nbr" android:gravity="center"></TextView>
		<TextView android:id="@+id/TextView03" android:textStyle="bold"
			android:typeface="serif" android:text="@string/header_plus_minus" android:gravity="center"></TextView>
		<TextView android:id="@+id/TextView02" android:textStyle="bold"
			android:typeface="serif" android:text="@string/header_modifier" android:gravity="center"></TextView>
		<TextView android:id="@+id/TextView01" android:textStyle="bold"
			android:typeface="serif"></TextView>
		<TextView android:id="@+id/TextView00" android:textStyle="bold"
			android:typeface="serif" android:text="@string/header_results" android:gravity="center"></TextView>
	</TableRow>
	<TableRow android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		<TextView android:id="@+id/textView2" android:textStyle="bold"
			android:text="@string/d4text"></TextView>		
		<EditText android:id="@+id/EditTextNumberD4" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="2" android:numeric="integer" android:singleLine="true"
			android:inputType="number" android:hint="@string/zerotext" />
		<Button android:id="@+id/ButtonPlusMinusD4" android:text="@string/plus_text" 
			android:gravity="center" android:onClick="buttonPlusMinusClick"></Button>
		<EditText android:id="@+id/EditTextModifierD4" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="2" android:numeric="integer" android:singleLine="true"
			android:inputType="number" android:hint="@string/zerotext" />
		<Button android:id="@+id/ButtonRollD4" android:text="@string/roll_text"
			android:gravity="center" android:onClick="buttonRollClick"></Button>
		<EditText android:id="@+id/EditTextResultsD4" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="4" android:numeric="integer" android:singleLine="true"
			android:inputType="none" android:hint="@string/zerotext"
			android:editable="false"/>
	</TableRow>
	<TableRow android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		<TextView   android:textStyle="bold"
			android:text="@string/d6text"></TextView>		
		<EditText android:id="@+id/EditTextNumberD6" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="2" android:numeric="integer" android:singleLine="true"
			android:inputType="number" android:hint="@string/zerotext" />
		<Button android:id="@+id/ButtonPlusMinusD6" android:text="@string/plus_text" 
			android:gravity="center" android:onClick="buttonPlusMinusClick"></Button>
		<EditText android:id="@+id/EditTextModifierD6" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="2" android:numeric="integer" android:singleLine="true"
			android:inputType="number" android:hint="@string/zerotext" />
		<Button android:id="@+id/ButtonRollD6" android:text="@string/roll_text"
			android:gravity="center" android:onClick="buttonRollClick"></Button>
		<EditText android:id="@+id/EditTextResultsD6" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="4" android:numeric="integer" android:singleLine="true"
			android:inputType="none" android:hint="@string/zerotext"
			android:editable="false" />
	</TableRow>
	<TableRow android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		<TextView   android:textStyle="bold"
			android:text="@string/d8text"></TextView>		
		<EditText android:id="@+id/EditTextNumberD8" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="2" android:numeric="integer" android:singleLine="true"
			android:inputType="number" android:hint="@string/zerotext" />
		<Button android:id="@+id/ButtonPlusMinusD8" android:text="@string/plus_text" 
			android:gravity="center" android:onClick="buttonPlusMinusClick"></Button>
		<EditText android:id="@+id/EditTextModifierD8" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="2" android:numeric="integer" android:singleLine="true"
			android:inputType="number" android:hint="@string/zerotext" />
		<Button android:id="@+id/ButtonRollD8" android:text="@string/roll_text"
			android:gravity="center" android:onClick="buttonRollClick"></Button>
		<EditText android:id="@+id/EditTextResultsD8" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="4" android:numeric="integer" android:singleLine="true"
			android:inputType="none" android:hint="@string/zerotext"
			android:editable="false" />
	</TableRow>
	<TableRow android:layout_height="wrap_content"  
		android:layout_width="fill_parent">
		<TextView   android:textStyle="bold"
			android:text="@string/d10text"></TextView>		
		<EditText android:id="@+id/EditTextNumberD10" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="2" android:numeric="integer" android:singleLine="true"
			android:inputType="number" android:hint="@string/zerotext" />
		<Button android:id="@+id/ButtonPlusMinusD10" android:text="@string/plus_text" 
			android:gravity="center" android:onClick="buttonPlusMinusClick"></Button>
		<EditText android:id="@+id/EditTextModifierD10" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="2" android:numeric="integer" android:singleLine="true"
			android:inputType="number" android:hint="@string/zerotext" />
		<Button android:id="@+id/ButtonRollD10" android:text="@string/roll_text"
			android:gravity="center" android:onClick="buttonRollClick"></Button>
		<EditText android:id="@+id/EditTextResultsD10" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="4" android:numeric="integer" android:singleLine="true"
			android:inputType="none" android:hint="@string/zerotext"
			android:editable="false" />
	</TableRow>
	<TableRow android:layout_height="wrap_content"  
		android:layout_width="fill_parent">
		<TextView   android:textStyle="bold"
			android:text="@string/d100text"></TextView>		
		<EditText android:id="@+id/EditTextNumberD100" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="2" android:numeric="integer" android:singleLine="true"
			android:inputType="number" android:hint="@string/zerotext" />
		<Button android:id="@+id/ButtonPlusMinusD100" android:text="@string/plus_text" 
			android:gravity="center" android:onClick="buttonPlusMinusClick"></Button>
		<EditText android:id="@+id/EditTextModifierD100" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="2" android:numeric="integer" android:singleLine="true"
			android:inputType="number" android:hint="@string/zerotext" />
		<Button android:id="@+id/ButtonRollD100" android:text="@string/roll_text"
			android:gravity="center" android:onClick="buttonRollClick"></Button>
		<EditText android:id="@+id/EditTextResultsD100" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="4" android:numeric="integer" android:singleLine="true"
			android:inputType="none" android:hint="@string/zerotext"
			android:editable="false" />
	</TableRow>
	<TableRow android:layout_height="wrap_content"  
		android:layout_width="fill_parent">
		<TextView   android:textStyle="bold"
			android:text="@string/d12text"></TextView>		
		<EditText android:id="@+id/EditTextNumberD12" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="2" android:numeric="integer" android:singleLine="true"
			android:inputType="number" android:hint="@string/zerotext" />
		<Button android:id="@+id/ButtonPlusMinusD12" android:text="@string/plus_text" 
			android:gravity="center" android:onClick="buttonPlusMinusClick"></Button>
		<EditText android:id="@+id/EditTextModifierD12" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="2" android:numeric="integer" android:singleLine="true"
			android:inputType="number" android:hint="@string/zerotext" />
		<Button android:id="@+id/ButtonRollD12" android:text="@string/roll_text"
			android:gravity="center" android:onClick="buttonRollClick"></Button>
		<EditText android:id="@+id/EditTextResultsD12" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="4" android:numeric="integer" android:singleLine="true"
			android:inputType="none" android:hint="@string/zerotext"
			android:editable="false" />
	</TableRow>
	<TableRow android:layout_height="wrap_content"  
		android:layout_width="fill_parent">
		<TextView   android:textStyle="bold"
			android:text="@string/d20text"></TextView>		
		<EditText android:id="@+id/EditTextNumberD20" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="2" android:numeric="integer" android:singleLine="true"
			android:inputType="number" android:hint="@string/zerotext" />
		<Button android:id="@+id/ButtonPlusMinusD20" android:text="@string/plus_text" 
			android:gravity="center" android:onClick="buttonPlusMinusClick"></Button>
		<EditText android:id="@+id/EditTextModifierD20" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="2" android:numeric="integer" android:singleLine="true"
			android:inputType="number" android:hint="@string/zerotext" />
		<Button android:id="@+id/ButtonRollD20" android:text="@string/roll_text"
			android:gravity="center" android:onClick="buttonRollClick"></Button>
		<EditText android:id="@+id/EditTextResultsD20" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:maxLength="4" android:numeric="integer" android:singleLine="true"
			android:inputType="none" android:hint="@string/zerotext"
			android:editable="false" />
	</TableRow>
	
	<View   android:id="@+id/firstDivider"
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#808080" />
	
	<TableRow android:layout_height="wrap_content"  
		android:layout_width="fill_parent">
		<Button android:id="@+id/ButtonViewLog" android:text="@string/view_log" 
			android:onClick="buttonViewLogClick" android:layout_span="6">
		</Button>
	</TableRow>
</TableLayout>
   

</ScrollView>